--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
-  <title> Page Title </title>
+  <title> 
+       Page Title 
+  </title>
   <body>
-Hello there, awesome person!
+       Hello there, awesome person!
   </body>
 </html>
