--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
-  <title> 
-       Page Title 
-  </title>
-  <body>
-       Hello there, awesome person! How are you?
-  </body>
+    <head>
+        <title>I am a title!</title>
+    </head>
+
+    <body>
+        Some content.
+    </body>
 </html>
